<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.userApp.Fragments.OrderReviewFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:src="@color/colorBardark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="21dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView20" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="9999.99"
            android:textColor="@color/white"
            android:textSize="21dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintEnd_toStartOf="@+id/commadRequest"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/imageView20" />

        <TextView
            android:id="@+id/totalPriceUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="24dp"
            android:text="MAD"
            android:textColor="@color/background"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalPrice" />

        <ImageView
            android:id="@+id/commadRequest"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:src="@color/whiteTransparwnt"
            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
            app:layout_constraintEnd_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="@+id/imageView20"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/CommadRequestButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/command"
            android:textColor="@color/white"
            android:textSize="21dp"
            app:layout_constraintBottom_toBottomOf="@+id/commadRequest"
            app:layout_constraintEnd_toEndOf="@+id/commadRequest"
            app:layout_constraintStart_toStartOf="@+id/commadRequest"
            app:layout_constraintTop_toTopOf="@+id/commadRequest" />

        <View
            android:id="@+id/divider11"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/CommadRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/CommadRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/divider11"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="120dp"
            android:text="@string/price"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/divider11"
            app:layout_constraintStart_toStartOf="@+id/divider11"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/total"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/divider11"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CommadRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider11" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
